--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ MobileApp/Striker_Mobile/*.pem
 
 # env files
 MobileApp/Striker_Mobile/.env*.local
+MobileApp/Striker_Mobile/.env
 
 # TS build info (if any slipped in)
 MobileApp/Striker_Mobile/*.tsbuildinfo
