--- a/MobileApp/Striker_Mobile/package.json
+++ b/MobileApp/Striker_Mobile/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "~52.0.46",
     "expo-dev-client": "^5.0.20",
+    "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "^4.0.9",
     "react": "18.3.1",
