--- a/MobileApp/Striker_Mobile/package.json
+++ b/MobileApp/Striker_Mobile/package.json
@@ -24,7 +24,9 @@
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
+    "react-native-make": "^1.0.1"
   },
   "private": true
 }
