--- a/MobileApp/Striker_Mobile/package.json
+++ b/MobileApp/Striker_Mobile/package.json
@@ -16,6 +16,7 @@
     "expo-location": "~18.0.10",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "^4.0.9",
+    "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-ble-plx": "^3.5.0",
