--- a/MobileApp/Striker_Mobile/package.json
+++ b/MobileApp/Striker_Mobile/package.json
@@ -22,7 +22,8 @@
     "react-native-ble-plx": "^3.5.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-build-properties": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
